# stt-benchmarks

./: .gitignore  French_I_-_Lesson_01_human_eval.txt  README.md  UV_MIGRATION_GUIDE.md  alive-progress-implementation.md  alive-progress.mdc  colloqual_french.md  pyproject.toml  pyproject.toml.poetry-backup  transcribe_clean.py  transcribe_fast.py  transcribe_french.py  transcribe_french_enhanced.py  transcript-nospeakers-human-eval.txt
archive/: test_enhanced_tiny.py  test_fast_models.py  test_large_models.py  test_mlx_simple.py  test_mlx_whisper.py  test_reasonable_models.py  transcribe_tiny_only.py  transcribe_with_whisperkit.py
benchmark_results/benchmark_20250620_134841/: benchmark_report.json  kyutai-standard_result.json  whisperkit-large-v3-626mb_result.json  whisperkit-large-v3-turbo-632mb_result.json  whisperkit-tiny_result.json
benchmark_results/benchmark_20250620_154948/: benchmark_report.json  kyutai-standard_result.json  whisperkit-distill-large-v3_result.json  whisperkit-large-v3-626mb_result.json  whisperkit-large-v3-turbo-632mb_result.json  whisperkit-tiny_result.json
benchmark_results/benchmark_20250620_155314/: benchmark_report.json  kyutai-standard_result.json  whisperkit-distill-large-v3_result.json  whisperkit-large-v3-626mb_result.json  whisperkit-large-v3-turbo-632mb_result.json  whisperkit-tiny_result.json
benchmark_results/benchmark_20250620_155642/: benchmark_report.json  kyutai-standard_result.json  whisperkit-distill-large-v3_result.json  whisperkit-large-v3-626mb_result.json  whisperkit-large-v3-turbo-632mb_result.json  whisperkit-tiny_result.json
benchmark_results/benchmark_20250620_160049/: benchmark_report.json  kyutai-standard_result.json  whisperkit-distill-large-v3_result.json  whisperkit-large-v3-626mb_result.json  whisperkit-large-v3-turbo-632mb_result.json  whisperkit-tiny_result.json
benchmark_results/benchmark_20250620_161116/: kyutai-standard_result.json  reference_transcription.txt  whisperkit-distill-large-v3_result.json  whisperkit-large-v3-626mb_result.json  whisperkit-large-v3-turbo-632mb_result.json  whisperkit-tiny_result.json
benchmark_results/benchmark_20250620_161522/: benchmark_report.json  benchmark_results.md  kyutai-standard_result.json  whisperkit-distill-large-v3_result.json  whisperkit-large-v3-626mb_result.json  whisperkit-large-v3-turbo-632mb_result.json  whisperkit-tiny_result.json
book_cleaning/: README.md  markdown_post_processor.py  unit2_processor.py
book_cleaning/archive/: gemini_ocr_blog.md  improved_config.yaml  mistral_ocr_python_guide.md  ocr_corrector.py  proposal_v2.md  smart_config.yaml
book_cleaning/archive/old_formatters/: book_formatter.py  book_formatter_v2.py  format_book.py  mistral_ex.py
book_cleaning/archive/old_outputs/: colloqual_french_formatted.md  colloqual_french_human.md  formatting_summary.md  run_v2.sh  v2_usage_examples.md
book_cleaning/archive/test_outputs/: output-mistral-test-correct.md  output-mistral-test-try1.md  output-mistral-test-try2.md
book_cleaning/archive/test_scripts/: example_based_formatter.py  precise_formatter.py  test_improved.py  test_sample.py
book_cleaning/archive/v1_experiments/: full_test_results.md  gemini_ocr_formatter.py  hybrid_ocr_qa.py  mistral_page_processor.py  ocr_comparison.py  practical_hybrid_ocr.py  process_unit2.py  quality_analysis.md
book_cleaning/formatted_output/unit2_optimized_output/: Unit2_Colloquial French 1_formatted_v2.md  post_processing_stats.json  processing_results_v2.json  unit2_raw_ocr_v2.md
docs/: KYUTAI_INTEGRATION.md  KYUTAI_TEST_RESULTS.md  Kyutai Moshi Speech-to-Text Models- Comprehensive Technical Breakdown.md  benchmark_analysis.md
examples/benchmarks/: compare_stt_models.py  comprehensive_stt_benchmark.py  test_comprehensive_kyutai_only.py  test_kyutai_only.py  test_whisperkit_large.py  test_whisperkit_tiny.py
examples/demos/: kyutai_streaming_demo.py
examples/integration/: diarization_integration.py  test_kyutai_simple.py  test_kyutai_stt.py
examples/transcription/: transcribe_clean.py  transcribe_fast.py  transcribe_french.py  transcribe_french_enhanced.py
outputs/: kyutai_simple_output.txt
outputs/benchmark_results/benchmark_20250620_120109/: benchmark_report.json  (+5 more)
stt-1b-en_fr/: config.json  mimi-pytorch-e351c8d8@125.safetensors  model.safetensors  tokenizer_en_fr_audio_8000.model
stt-1b-en_fr-candle/: README.md  model.safetensors
stt-1b-en_fr-mlx/: model.safetensors
whisperkit/: pipelines.py
whisperkit/evaluate/: datasets.py
(+61 files in other folders)
