[tool.poetry]
name = "whisperkit"
version = "0.3.0"
description = "Argmax WhisperKit Optimization Toolkit"
authors = ["Argmax, Inc."]
readme = "README.md"
homepage = "https://github.com/argmaxinc/whisperkittools"
repository = "https://github.com/argmaxinc/whisperkittools"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
packages = [{include = "whisperkit"}]

[tool.poetry.dependencies]
python = "^3.9"
argmaxtools = "*"
transformers = "*"
huggingface-hub = "*"
torch = "2.6.0"

[tool.poetry.group.pipelines]
optional = true

[tool.poetry.group.pipelines.dependencies]
openai = "*"
mlx-whisper = "*"

[tool.poetry.group.diarization]
optional = true

[tool.poetry.group.diarization.dependencies]
pyannote-audio = "*"

[tool.poetry.group.evals]
optional = true

[tool.poetry.group.evals.dependencies]
jiwer = "*"
soundfile = "*"
librosa = "*"
datasets = "*"
evaluate = "*"
transliterate = "*"
openai = "*"
mlx-whisper = "*"

# Android dependencies are currently incompatible with torch 2.6.0
# qai-hub-models requires torch <2.6.0, but this project requires torch 2.6.0
# To use android features, install these manually in a compatible environment:
# pip install qai-hub qai-hub-models
#
# [tool.poetry.group.android]
# optional = true
#
# [tool.poetry.group.android.dependencies]
# qai-hub = "*"
# qai-hub-models = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
alive-progress = "*"

[tool.poetry.scripts]
whisperkit-generate-model = "scripts.generate_model:cli"
whisperkit-evaluate-model = "scripts.evaluate_model:cli"
whisperkit-generate-readme = "scripts.generate_readme:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 110
per-file-ignores = [
    # tensor type+shape hints throwing off flake8
    "whisperkit/audio_encoder.py:F722",
    "whisperkit/text_decoder.py:F722",
]